@@ -3495,8 +3495,7 @@ cp_parser_skip_to_end_of_statement (cp_parser* parser)
 	      cp_lexer_consume_token (parser->lexer);
 	      return;
 	    }
-	  /* XXX Really fallthru?  */
-	  /* FALLTHRU */
+	  break;
 
 	case CPP_OPEN_BRACE:
 	  ++nesting_depth;
@@ -27932,7 +27931,6 @@ cp_parser_cache_defarg (cp_parser *parser, bool nsdmi)
 	      parser->in_template_argument_list_p = saved_italp;
 	      break;
 	    }
-	  /* XXX Really fallthru?  */
 	  /* FALLTHRU */
 	case CPP_CLOSE_PAREN:
 	case CPP_ELLIPSIS:
